build/log/idf_py_stdout_output_17448
[1/12] Linking C static library esp-idf\ultra\libultra.a
[2/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\TrabajoTerminalII\DosificadorV2\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/TrabajoTerminalII/DosificadorV2/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[3/10] Building C object esp-idf/hx711_comp/CMakeFiles/__idf_hx711_comp.dir/hx711_comp.c.obj
FAILED: esp-idf/hx711_comp/CMakeFiles/__idf_hx711_comp.dir/hx711_comp.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/TrabajoTerminalII/DosificadorV2/build/config -IC:/TrabajoTerminalII/DosificadorV2/components/hx711_comp -IC:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -IC:/TrabajoTerminalII/DosificadorV2/components/variables_globales -I/TrabajoTerminalII/esp-idf-lib/components/hx711 -IC:/Espressif/frameworks/esp-idf-v5.3/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.3/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_gpio/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_spi/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_ana_cmpr/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_i2s/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_sdspi/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_sdio/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_dac/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_rmt/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_tsens/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_sdm/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_i2c/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_ledc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_parlio/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_usb_serial_jtag/include -I/TrabajoTerminalII/esp-idf-lib/components/esp_idf_lib_helpers -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/TrabajoTerminalII/DosificadorV2=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/hx711_comp/CMakeFiles/__idf_hx711_comp.dir/hx711_comp.c.obj -MF esp-idf\hx711_comp\CMakeFiles\__idf_hx711_comp.dir\hx711_comp.c.obj.d -o esp-idf/hx711_comp/CMakeFiles/__idf_hx711_comp.dir/hx711_comp.c.obj -c C:/TrabajoTerminalII/DosificadorV2/components/hx711_comp/hx711_comp.c
C:/TrabajoTerminalII/DosificadorV2/components/hx711_comp/hx711_comp.c: In function 'medir_bascula':
C:/TrabajoTerminalII/DosificadorV2/components/hx711_comp/hx711_comp.c:59:16: error: 'return' with a value, in function returning void [-Werror=return-type]
   59 |         return 0;
      |                ^
C:/TrabajoTerminalII/DosificadorV2/components/hx711_comp/hx711_comp.c:50:6: note: declared here
   50 | void medir_bascula(void *pvParameters)
      |      ^~~~~~~~~~~~~
C:/TrabajoTerminalII/DosificadorV2/components/hx711_comp/hx711_comp.c:67:16: error: 'return' with a value, in function returning void [-Werror=return-type]
   67 |         return 0;
      |                ^
C:/TrabajoTerminalII/DosificadorV2/components/hx711_comp/hx711_comp.c:50:6: note: declared here
   50 | void medir_bascula(void *pvParameters)
      |      ^~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
